Added Authentication builder service in Program.cs

--- a/NZWalks.API/appsettings.json
+++ b/NZWalks.API/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "NZWalksConnnectionString": "Server=localhost;Database=NZWalksDb;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+  "Jwt": {
+    "Key": "randomKey12345@AspdotnetCoreWebApi",
+    "Issuer": "https://localhost:7056",
+    "Audience": "https://localhost:7056"
+    }
   }
-}
